--- a/app/src/main/res/layout/fragment_during_cooking.xml
+++ b/app/src/main/res/layout/fragment_during_cooking.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
     <LinearLayout
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -51,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/foodPic"
+                android:layout_marginTop="10dp"
                 android:text="1 DOOOOOOOOOOOOOOOOOOOOOO"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"/>
@@ -63,24 +67,24 @@
 
 
                 <Button
-                    android:id="@+id/confirm"
+                    android:id="@+id/next"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/round_button"
-                    android:text="Confirm"
+                    android:text="Next"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"/>
 
                 <Button
-                    android:id="@+id/cancel"
+                    android:id="@+id/listen_again"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:background="@drawable/round_button"
-                    android:text="Cancel"
+                    android:text="Listen Again"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"/>
 
@@ -92,10 +96,20 @@
                 android:layout_height="80dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/microphone"
                 app:srcCompat="@drawable/microphone"/>
+
         </RelativeLayout>
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/medal"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_centerInParent="true"
+        />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
+
