--- a/app/src/main/res/layout/refrigerator_section_fragment.xml
+++ b/app/src/main/res/layout/refrigerator_section_fragment.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:id="@+id/refrigerator">
 
     <LinearLayout
         xmlns:tools="http://schemas.android.com/tools"
@@ -65,4 +65,4 @@
         app:fabSize="auto"
         app:srcCompat="@drawable/ic_add_white_24dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
