--- a/app/src/main/res/layout/fragment_can_cook.xml
+++ b/app/src/main/res/layout/fragment_can_cook.xml
@@ -8,7 +8,16 @@
     tools:context="com.example.cookzyme.cookzyme.CanCookFragment">
 
     <!-- TODO: Update blank fragment layout -->
-
+    <ProgressBar
+        android:id="@+id/progressBarHome"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.04000002" />
     <ListView
         android:id="@+id/listview1"
         android:layout_width="0dp"
