--- a/app/src/main/res/layout/refrigerator_section_fragment.xml
+++ b/app/src/main/res/layout/refrigerator_section_fragment.xml
@@ -2,9 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/refrigerator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/refrigerator">
+    android:background="@color/colorBG">
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
