--- a/app/src/main/res/layout/activity_profile2.xml
+++ b/app/src/main/res/layout/activity_profile2.xml
@@ -8,6 +8,13 @@
     android:background="@android:color/white"
     android:clickable="true">
 
+    <ProgressBar
+        android:id="@+id/progressBarProfile"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp" />
+
     <RelativeLayout
         android:id="@+id/grid"
         android:layout_width="match_parent"
