--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -9,107 +9,116 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-    <LinearLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/Toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_weight="1"
-                android:background="@color/colorToolbar"
-                android:elevation="0dp"
-                android:textAlignment="center"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:title="Menu"
-                app:titleTextColor="@android:color/white"></android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.AppBarLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/foodPic"
+            <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/egg"/>
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/step"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/foodPic"
-                android:layout_marginTop="10dp"
-                android:text="1 DOOOOOOOOOOOOOOOOOOOOOO"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"/>
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/Toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_weight="1"
+                    android:background="@color/colorToolbar"
+                    android:elevation="0dp"
+                    android:textAlignment="center"
+                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    app:title="Menu"
+                    app:titleTextColor="@android:color/white"></android.support.v7.widget.Toolbar>
+
+            </android.support.design.widget.AppBarLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/record"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:orientation="vertical">
 
-
-                <Button
-                    android:id="@+id/next"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/round_button"
-                    android:text="Next"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"/>
+                    android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/listen_again"
-                    android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/foodPic"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="center"
+                        />
+
+                    <ImageView
+                        android:id="@+id/camera"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_alignBottom="@+id/foodPic"
+                        android:layout_alignParentEnd="false"
+                        android:layout_alignRight="@+id/foodPic"
+                        android:layout_centerInParent="false"
+                        android:src="@drawable/camera"/>
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/facebook"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        app:srcCompat="@drawable/facebook"/>
+
+                    <Switch
+                        android:id="@+id/switchFacebook"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="20dp"
+                        android:checked="false"/>
+
+                </LinearLayout>
+
+                <EditText
+                    android:id="@+id/editText"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/round_button"
-                    android:text="Listen Again"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"/>
+                    android:inputType="text"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="vertical">
+
+
+                    <com.facebook.share.widget.ShareButton
+                        android:id="@+id/fb_share_button2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginRight="20dp"
+                        android:layout_weight="1"
+                        android:background="@color/com_facebook_blue"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/record"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/microphone"
-                app:srcCompat="@drawable/microphone"/>
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/medal"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerInParent="true"
-        />
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
 
