--- a/app/src/main/res/layout/home_tab_fragment.xml
+++ b/app/src/main/res/layout/home_tab_fragment.xml
@@ -1,6 +1,10 @@
-<ScrollView
+<FrameLayout
+    android:id="@+id/home_tab_fl"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:nestedScrollingEnabled="true"
@@ -27,3 +31,4 @@
 
     </LinearLayout>
 </ScrollView>
+</FrameLayout>
